Ajout de corpus et d’un test de disposition Optimot 1DK

--- a/www/content/stats.html
+++ b/www/content/stats.html
@@ -38,6 +38,7 @@ footer = "quantifié par [x-keyboard](https://onedeadkey.github.io/x-keyboard)"
       <option>fr</option>
       <option>Essais</option>
       <option>Panache</option>
+      <option>Swann</option>
     </select>
   </form>
 
